--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon says game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Simon says game</h1>
-    <h2>Press Any key to start</h2>
+    <h2>Press Any key to start or the below button to start the game</h2>
+    <button id="startbtn"> Start game</button>
     <div class="btn-container">
         <div class="line-one">
             <div class="btn red" type="button" id="red">1</div>
@@ -19,6 +23,7 @@
             <div class="btn purple" type="button" id="purple">4</div>
         </div>
     </div>
+    
 
     <script src="app.js"></script>
 </body>
